--- a/kernel-aarch64-debug-fedora.config
+++ b/kernel-aarch64-debug-fedora.config
@@ -2205,6 +2205,7 @@ CONFIG_EEPROM_IDT_89HPESX=m
 CONFIG_EEPROM_LEGACY=m
 CONFIG_EEPROM_MAX6875=m
 CONFIG_EFI_ARMSTUB_DTB_LOADER=y
+CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
 # CONFIG_EFI_BOOTLOADER_CONTROL is not set
 # CONFIG_EFI_CAPSULE_LOADER is not set
 CONFIG_EFI_COCO_SECRET=y
@@ -2477,6 +2478,7 @@ CONFIG_FSNOTIFY=y
 # CONFIG_FS_VERITY_DEBUG is not set
 CONFIG_FS_VERITY=y
 # CONFIG_FTL is not set
+# CONFIG_FTM_QUADDEC is not set
 CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_FTRACE_RECORD_RECURSION is not set
 # CONFIG_FTRACE_SORT_STARTUP_TEST is not set
@@ -2567,7 +2569,7 @@ CONFIG_GPIO_AGGREGATOR=m
 CONFIG_GPIO_BD9571MWV=m
 CONFIG_GPIO_CADENCE=m
 CONFIG_GPIO_CDEV_V1=y
-CONFIG_GPIO_DAVINCI=m
+# CONFIG_GPIO_DAVINCI is not set
 CONFIG_GPIO_DLN2=m
 CONFIG_GPIO_DWAPB=m
 CONFIG_GPIO_EXAR=m
@@ -2905,7 +2907,7 @@ CONFIG_HZ_100=y
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_500 is not set
 # CONFIG_HZ_PERIODIC is not set
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_ALGOPCA=m
 CONFIG_I2C_ALGOPCF=m
 # CONFIG_I2C_ALI1535 is not set
@@ -3296,6 +3298,7 @@ CONFIG_INTEL_SOC_PMIC_CHTDC_TI=y
 # CONFIG_INTEL_TH is not set
 CONFIG_INTEL_UNCORE_FREQ_CONTROL=m
 # CONFIG_INTEL_WMI_SBL_FW_UPDATE is not set
+# CONFIG_INTEL_QEP is not set
 CONFIG_INTEL_XWAY_PHY=m
 CONFIG_INTERCONNECT_IMX8MM=m
 CONFIG_INTERCONNECT_IMX8MN=m
@@ -4203,6 +4206,7 @@ CONFIG_MFD_MAX77714=m
 # CONFIG_MFD_PALMAS is not set
 # CONFIG_MFD_PCF50633 is not set
 # CONFIG_MFD_PM8XXX is not set
+# CONFIG_UCB1400_CORE is not set
 # CONFIG_MFD_QCOM_PM8008 is not set
 # CONFIG_MFD_QCOM_RPM is not set
 # CONFIG_MFD_RC5T583 is not set
@@ -4276,6 +4280,7 @@ CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROCHIP_PIT64B is not set
 # CONFIG_MICROCHIP_T1_PHY is not set
 CONFIG_MICROCHIP_T1S_PHY=m
+# CONFIG_MICROCHIP_TCB_CAPTURE is not set
 CONFIG_MICROSEMI_PHY=m
 CONFIG_MIGRATION=y
 CONFIG_MII=m
@@ -5262,7 +5267,7 @@ CONFIG_NVMEM_SYSFS=y
 CONFIG_NVMEM_U_BOOT_ENV=m
 CONFIG_NVME_MULTIPATH=y
 CONFIG_NVMEM=y
-CONFIG_NVMEM_ZYNQMP=m
+# CONFIG_NVMEM_ZYNQMP is not set
 CONFIG_NVME_RDMA=m
 CONFIG_NVME_TARGET_AUTH=y
 CONFIG_NVME_TARGET_FCLOOP=m
@@ -6007,6 +6012,7 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QUOTA=y
 CONFIG_R6040=m
 CONFIG_R8169=m
+# CONFIG_R8188EU is not set
 CONFIG_R8712U=m
 CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
@@ -8251,8 +8257,8 @@ CONFIG_TI_K3_DSP_REMOTEPROC=m
 CONFIG_TI_K3_R5_REMOTEPROC=m
 CONFIG_TI_K3_RINGACC=y
 CONFIG_TI_K3_SOCINFO=y
-CONFIG_TI_K3_UDMA_GLUE_LAYER=m
-CONFIG_TI_K3_UDMA=m
+# CONFIG_TI_K3_UDMA_GLUE_LAYER is not set
+# CONFIG_TI_K3_UDMA is not set
 CONFIG_TI_LMP92064=m
 CONFIG_TIME_KUNIT_TEST=m
 CONFIG_TIME_NS=y
@@ -8596,6 +8602,7 @@ CONFIG_USB_EZUSB_FX2=m
 # CONFIG_USB_FEW_INIT_RETRIES is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_FOTG210_UDC is not set
+# CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_FUNCTIONFS is not set
 # CONFIG_USB_FUSB300 is not set
 # CONFIG_USB_G_ACM_MS is not set
@@ -8958,6 +8965,7 @@ CONFIG_VIDEO_AK7375=m
 CONFIG_VIDEO_ALLEGRO_DVT=m
 CONFIG_VIDEO_AMPHION_VPU=m
 CONFIG_VIDEO_AR0521=m
+# CONFIG_VIDEO_ASPEED is not set
 CONFIG_VIDEO_AU0828=m
 # CONFIG_VIDEO_AU0828_RC is not set
 CONFIG_VIDEO_AU0828_V4L2=y
@@ -9038,19 +9046,23 @@ CONFIG_VIDEO_IMX_PXP=m
 CONFIG_VIDEO_IVTV=m
 CONFIG_VIDEO_LM3560=m
 CONFIG_VIDEO_LM3646=m
+# CONFIG_VIDEO_M5MOLS is not set
 # CONFIG_VIDEO_MAX96712 is not set
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
 CONFIG_VIDEO_MESON_GE2D=m
 CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_VIDEO_MT9M001=m
+# CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9M111 is not set
 CONFIG_VIDEO_MT9P031=m
+# CONFIG_VIDEO_MT9T001 is not set
 CONFIG_VIDEO_MT9T112=m
 CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_MT9V032=m
 CONFIG_VIDEO_MT9V111=m
 CONFIG_VIDEO_MUX=m
 CONFIG_VIDEO_MXB=m
+# CONFIG_VIDEO_NOON010PC30 is not set
 CONFIG_VIDEO_OG01A1B=m
 CONFIG_VIDEO_OV02A10=m
 CONFIG_VIDEO_OV08D10=m
@@ -9099,6 +9111,7 @@ CONFIG_VIDEO_ROCKCHIP_VDEC=m
 CONFIG_VIDEO_S5C73M3=m
 CONFIG_VIDEO_S5K4ECGX=m
 CONFIG_VIDEO_S5K5BAF=m
+# CONFIG_VIDEO_S5K6AA is not set
 CONFIG_VIDEO_S5K6A3=m
 CONFIG_VIDEO_SAA6588=m
 CONFIG_VIDEO_SAA7134_ALSA=m
@@ -9110,6 +9123,7 @@ CONFIG_VIDEO_SAA7146=m
 CONFIG_VIDEO_SAA7146_VV=m
 CONFIG_VIDEO_SAA7164=m
 CONFIG_VIDEO_SOLO6X10=m
+# CONFIG_VIDEO_SR030PC30 is not set
 CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_STK1160=m
 # CONFIG_VIDEO_STKWEBCAM is not set
@@ -9146,6 +9160,7 @@ CONFIG_VIDEO_VISL=m
 CONFIG_VIDEO_VIVID_CEC=y
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIVID_MAX_DEVS=64
+# CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_XILINX is not set
 # CONFIG_VIDEO_ZORAN is not set
 # CONFIG_VIPERBOARD_ADC is not set
