--- a/kernel-x86_64-rhel.config
+++ b/kernel-x86_64-rhel.config
@@ -2197,7 +2197,7 @@ CONFIG_HZ_1000=y
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_PERIODIC is not set
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_ALGOPCA=m
 CONFIG_I2C_ALGOPCF=m
 # CONFIG_I2C_ALI1535 is not set
