--- a/kernel-armv7hl-lpae-fedora.config
+++ b/kernel-armv7hl-lpae-fedora.config
@@ -2143,6 +2143,7 @@ CONFIG_EFI_COCO_SECRET=y
 CONFIG_EFI_CUSTOM_SSDT_OVERLAYS=y
 # CONFIG_EFI_DISABLE_PCI_DMA is not set
 # CONFIG_EFI_DISABLE_RUNTIME is not set
+CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
 CONFIG_EFI_HANDOVER_PROTOCOL=y
 CONFIG_EFI_PARTITION=y
 # CONFIG_EFI_PGT_DUMP is not set
@@ -2393,6 +2394,7 @@ CONFIG_FSNOTIFY=y
 # CONFIG_FS_VERITY_DEBUG is not set
 CONFIG_FS_VERITY=y
 # CONFIG_FTL is not set
+# CONFIG_FTM_QUADDEC is not set
 CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_FTRACE_RECORD_RECURSION is not set
 # CONFIG_FTRACE_SORT_STARTUP_TEST is not set
@@ -2481,7 +2483,7 @@ CONFIG_GPIO_AGGREGATOR=m
 CONFIG_GPIO_BD9571MWV=m
 CONFIG_GPIO_CADENCE=m
 CONFIG_GPIO_CDEV_V1=y
-CONFIG_GPIO_DAVINCI=m
+# CONFIG_GPIO_DAVINCI is not set
 CONFIG_GPIO_DLN2=m
 CONFIG_GPIO_DWAPB=m
 CONFIG_GPIO_EXAR=m
@@ -2708,7 +2710,7 @@ CONFIG_HID=y
 CONFIG_HID_ZEROPLUS=m
 CONFIG_HID_ZYDACRON=m
 CONFIG_HIGHMEM=y
-# CONFIG_HIGHPTE is not set
+CONFIG_HIGHPTE=y
 CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_HIPPI is not set
 # CONFIG_HISI_DMA is not set
@@ -2794,7 +2796,7 @@ CONFIG_HZ_1000=y
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_500 is not set
 # CONFIG_HZ_PERIODIC is not set
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_ALGOPCA=m
 CONFIG_I2C_ALGOPCF=m
 # CONFIG_I2C_ALI1535 is not set
@@ -3180,6 +3182,7 @@ CONFIG_INTEL_SOC_PMIC_CHTDC_TI=y
 # CONFIG_INTEL_TH is not set
 CONFIG_INTEL_UNCORE_FREQ_CONTROL=m
 # CONFIG_INTEL_WMI_SBL_FW_UPDATE is not set
+# CONFIG_INTEL_QEP is not set
 CONFIG_INTEL_XWAY_PHY=m
 CONFIG_INTERCONNECT_EXYNOS=y
 # CONFIG_INTERCONNECT_IMX is not set
@@ -3997,6 +4000,7 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_MFD_AAT2870_CORE is not set
 CONFIG_MFD_AC100=m
 # CONFIG_MFD_ACT8945A is not set
+# CONFIG_MFD_ASIC3 is not set
 # CONFIG_MFD_ARIZONA_I2C is not set
 # CONFIG_MFD_ARIZONA_SPI is not set
 # CONFIG_MFD_AS3711 is not set
@@ -4061,7 +4065,7 @@ CONFIG_MFD_MAX8997=y
 # CONFIG_MFD_NVEC is not set
 # CONFIG_MFD_OCELOT is not set
 # CONFIG_MFD_OMAP_USB_HOST is not set
-CONFIG_MFD_PALMAS=m
+# CONFIG_MFD_PALMAS is not set
 # CONFIG_MFD_PCF50633 is not set
 # CONFIG_MFD_PM8XXX is not set
 # CONFIG_MFD_QCOM_PM8008 is not set
@@ -4095,7 +4099,10 @@ CONFIG_MFD_SUN4I_GPADC=m
 CONFIG_MFD_SUN6I_PRCM=y
 CONFIG_MFD_SY7636A=m
 CONFIG_MFD_SYSCON=y
+# CONFIG_MFD_T7L66XB is not set
 # CONFIG_MFD_TC3589X is not set
+# CONFIG_MFD_TC6387XB is not set
+# CONFIG_MFD_TC6393XB is not set
 CONFIG_MFD_TI_AM335X_TSCADC=m
 # CONFIG_MFD_TI_LMU is not set
 # CONFIG_MFD_TI_LP873X is not set
@@ -4136,6 +4143,7 @@ CONFIG_MICROCHIP_PHY=m
 # CONFIG_MICROCHIP_PIT64B is not set
 # CONFIG_MICROCHIP_T1_PHY is not set
 CONFIG_MICROCHIP_T1S_PHY=m
+# CONFIG_MICROCHIP_TCB_CAPTURE is not set
 CONFIG_MICROSEMI_PHY=m
 CONFIG_MIGRATION=y
 CONFIG_MII=m
@@ -5778,6 +5786,7 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QUOTA=y
 CONFIG_R6040=m
 CONFIG_R8169=m
+# CONFIG_R8188EU is not set
 CONFIG_R8712U=m
 CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
@@ -6851,6 +6860,7 @@ CONFIG_SLUB_KUNIT_TEST=m
 CONFIG_SLUB=y
 CONFIG_SMARTJOYPLUS_FF=y
 # CONFIG_SMB_SERVER is not set
+# CONFIG_SMC911X is not set
 CONFIG_SMC91X=m
 # CONFIG_SM_CAMCC_6350 is not set
 # CONFIG_SM_CAMCC_8250 is not set
@@ -7738,6 +7748,7 @@ CONFIG_STRIP_ASM_SYMS=y
 CONFIG_STRSCPY_KUNIT_TEST=m
 # CONFIG_ST_THERMAL is not set
 # CONFIG_ST_THERMAL_MEMMAP is not set
+# CONFIG_ST_THERMAL_SYSCFG is not set
 CONFIG_ST_UVIS25_I2C=m
 CONFIG_ST_UVIS25=m
 CONFIG_ST_UVIS25_SPI=m
@@ -8215,6 +8226,7 @@ CONFIG_UBIFS_FS=m
 CONFIG_UBIFS_FS_SECURITY=y
 CONFIG_UBIFS_FS_XATTR=y
 # CONFIG_UBSAN is not set
+# CONFIG_UCB1400_CORE is not set
 # CONFIG_UCLAMP_TASK is not set
 CONFIG_UCSI_ACPI=m
 CONFIG_UCSI_CCG=m
@@ -8354,6 +8366,7 @@ CONFIG_USB_EZUSB_FX2=m
 # CONFIG_USB_FEW_INIT_RETRIES is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_FOTG210_UDC is not set
+# CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_FUNCTIONFS is not set
 # CONFIG_USB_FUSB300 is not set
 # CONFIG_USB_G_ACM_MS is not set
@@ -8472,6 +8485,7 @@ CONFIG_USB_MICROTEK=m
 # CONFIG_USB_MIDI_GADGET is not set
 CONFIG_USB_MON=y
 CONFIG_USB_MR800=m
+# CONFIG_USB_MUSB_AM35X is not set
 CONFIG_USB_MUSB_DSPS=m
 CONFIG_USB_MUSB_DUAL_ROLE=y
 # CONFIG_USB_MUSB_GADGET is not set
@@ -8721,6 +8735,7 @@ CONFIG_VIDEO_AK7375=m
 CONFIG_VIDEO_AM437X_VPFE=m
 CONFIG_VIDEO_AMPHION_VPU=m
 CONFIG_VIDEO_AR0521=m
+# CONFIG_VIDEO_ASPEED is not set
 CONFIG_VIDEO_AU0828=m
 # CONFIG_VIDEO_AU0828_RC is not set
 CONFIG_VIDEO_AU0828_V4L2=y
@@ -8805,19 +8820,23 @@ CONFIG_VIDEO_IMX_PXP=m
 CONFIG_VIDEO_IVTV=m
 CONFIG_VIDEO_LM3560=m
 CONFIG_VIDEO_LM3646=m
+# CONFIG_VIDEO_M5MOLS is not set
 # CONFIG_VIDEO_MAX96712 is not set
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
 CONFIG_VIDEO_MESON_GE2D=m
 CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_VIDEO_MT9M001=m
+# CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9M111 is not set
 CONFIG_VIDEO_MT9P031=m
+# CONFIG_VIDEO_MT9T001 is not set
 CONFIG_VIDEO_MT9T112=m
 CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_MT9V032=m
 CONFIG_VIDEO_MT9V111=m
 CONFIG_VIDEO_MUX=m
 CONFIG_VIDEO_MXB=m
+# CONFIG_VIDEO_NOON010PC30 is not set
 CONFIG_VIDEO_OG01A1B=m
 CONFIG_VIDEO_OV02A10=m
 CONFIG_VIDEO_OV08D10=m
@@ -8865,6 +8884,7 @@ CONFIG_VIDEO_S5C73M3=m
 CONFIG_VIDEO_S5K4ECGX=m
 CONFIG_VIDEO_S5K5BAF=m
 CONFIG_VIDEO_S5K6A3=m
+# CONFIG_VIDEO_S5K6AA is not set
 CONFIG_VIDEO_S5P_FIMC=m
 CONFIG_VIDEO_S5P_MIPI_CSIS=m
 CONFIG_VIDEO_SAA6588=m
@@ -8882,6 +8902,7 @@ CONFIG_VIDEO_SAMSUNG_S5P_G2D=m
 CONFIG_VIDEO_SAMSUNG_S5P_JPEG=m
 CONFIG_VIDEO_SAMSUNG_S5P_MFC=m
 CONFIG_VIDEO_SOLO6X10=m
+# CONFIG_VIDEO_SR030PC30 is not set
 CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_STK1160=m
 # CONFIG_VIDEO_STKWEBCAM is not set
@@ -8921,6 +8942,7 @@ CONFIG_VIDEO_VISL=m
 CONFIG_VIDEO_VIVID_CEC=y
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIVID_MAX_DEVS=64
+# CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_XILINX is not set
 # CONFIG_VIDEO_ZORAN is not set
 # CONFIG_VIPERBOARD_ADC is not set
