--- a/kernel-ppc64le-fedora.config
+++ b/kernel-ppc64le-fedora.config
@@ -2309,7 +2309,7 @@ CONFIG_HZ_100=y
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_500 is not set
 # CONFIG_HZ_PERIODIC is not set
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_ALGOPCA=m
 CONFIG_I2C_ALGOPCF=m
 # CONFIG_I2C_ALI1535 is not set
@@ -4925,6 +4925,7 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QUOTA=y
 CONFIG_R6040=m
 CONFIG_R8169=m
+# CONFIG_R8188EU is not set
 CONFIG_R8712U=m
 CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
@@ -4999,7 +5000,7 @@ CONFIG_RD_ZSTD=y
 CONFIG_REALTEK_AUTOPM=y
 CONFIG_REALTEK_PHY=y
 # CONFIG_REED_SOLOMON_TEST is not set
-CONFIG_REGMAP_I2C=y
+CONFIG_REGMAP_I2C=m
 CONFIG_REGMAP_KUNIT=m
 CONFIG_REGMAP=y
 # CONFIG_REGULATOR_88PG86X is not set
@@ -7036,6 +7037,7 @@ CONFIG_UBIFS_FS=m
 CONFIG_UBIFS_FS_SECURITY=y
 CONFIG_UBIFS_FS_XATTR=y
 # CONFIG_UBSAN is not set
+# CONFIG_UCB1400_CORE is not set
 # CONFIG_UCLAMP_TASK is not set
 CONFIG_UCSI_ACPI=m
 CONFIG_UCSI_CCG=m
@@ -7381,6 +7383,7 @@ CONFIG_USB_STORAGE_SDDR55=m
 CONFIG_USB_STORAGE_USBAT=m
 CONFIG_USB_STV06XX=m
 CONFIG_USB_SUPPORT=y
+# CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_TEST is not set
 CONFIG_USB_TMC=m
 CONFIG_USB_TRANCEVIBRATOR=m
@@ -7523,16 +7526,20 @@ CONFIG_VIDEO_IMX415=m
 CONFIG_VIDEO_IVTV=m
 CONFIG_VIDEO_LM3560=m
 CONFIG_VIDEO_LM3646=m
+# CONFIG_VIDEO_M5MOLS is not set
 # CONFIG_VIDEO_MAX96712 is not set
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
 CONFIG_VIDEO_MT9M001=m
+# CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9M111 is not set
 CONFIG_VIDEO_MT9P031=m
+# CONFIG_VIDEO_MT9T001 is not set
 CONFIG_VIDEO_MT9T112=m
 CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_MT9V032=m
 CONFIG_VIDEO_MT9V111=m
 CONFIG_VIDEO_MXB=m
+# CONFIG_VIDEO_NOON010PC30 is not set
 CONFIG_VIDEO_OG01A1B=m
 CONFIG_VIDEO_OV02A10=m
 CONFIG_VIDEO_OV08D10=m
@@ -7578,6 +7585,7 @@ CONFIG_VIDEO_S5C73M3=m
 CONFIG_VIDEO_S5K4ECGX=m
 CONFIG_VIDEO_S5K5BAF=m
 CONFIG_VIDEO_S5K6A3=m
+# CONFIG_VIDEO_S5K6AA is not set
 CONFIG_VIDEO_SAA6588=m
 CONFIG_VIDEO_SAA7134_ALSA=m
 CONFIG_VIDEO_SAA7134_DVB=m
@@ -7588,6 +7596,7 @@ CONFIG_VIDEO_SAA7146=m
 CONFIG_VIDEO_SAA7146_VV=m
 CONFIG_VIDEO_SAA7164=m
 CONFIG_VIDEO_SOLO6X10=m
+# CONFIG_VIDEO_SR030PC30 is not set
 CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_STK1160=m
 # CONFIG_VIDEO_STKWEBCAM is not set
@@ -7611,6 +7620,7 @@ CONFIG_VIDEO_VISL=m
 CONFIG_VIDEO_VIVID_CEC=y
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIVID_MAX_DEVS=64
+# CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_XILINX is not set
 # CONFIG_VIDEO_ZORAN is not set
 # CONFIG_VIPERBOARD_ADC is not set
