--- a/kernel-s390x-rhel.config
+++ b/kernel-s390x-rhel.config
@@ -2062,7 +2062,7 @@ CONFIG_HZ_100=y
 # CONFIG_HZ_250 is not set
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_PERIODIC is not set
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_ALGOPCA is not set
 # CONFIG_I2C_ALGOPCF is not set
 # CONFIG_I2C_ALI1535 is not set
