--- a/kernel-x86_64-debug-fedora.config
+++ b/kernel-x86_64-debug-fedora.config
@@ -817,6 +817,8 @@ CONFIG_CAN_SLCAN=m
 CONFIG_CAN_VCAN=m
 CONFIG_CAN_VXCAN=m
 CONFIG_CARDBUS=y
+# CONFIG_CARDMAN_4000 is not set
+# CONFIG_CARDMAN_4040 is not set
 CONFIG_CARL9170_DEBUGFS=y
 # CONFIG_CARL9170_HWRNG is not set
 CONFIG_CARL9170_LEDS=y
@@ -1861,6 +1863,7 @@ CONFIG_EEPROM_EE1004=m
 CONFIG_EEPROM_IDT_89HPESX=m
 CONFIG_EEPROM_LEGACY=m
 CONFIG_EEPROM_MAX6875=m
+CONFIG_EFI_GENERIC_STUB_INITRD_CMDLINE_LOADER=y
 # CONFIG_EFI_BOOTLOADER_CONTROL is not set
 # CONFIG_EFI_CAPSULE_LOADER is not set
 # CONFIG_EFI_CAPSULE_QUIRK_QUARK_CSH is not set
@@ -2517,7 +2520,7 @@ CONFIG_HZ_1000=y
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_500 is not set
 # CONFIG_HZ_PERIODIC is not set
-CONFIG_I2C_ALGOBIT=m
+CONFIG_I2C_ALGOBIT=y
 CONFIG_I2C_ALGOPCA=m
 CONFIG_I2C_ALGOPCF=m
 # CONFIG_I2C_ALI1535 is not set
@@ -4854,7 +4857,9 @@ CONFIG_PANTHERLORD_FF=y
 CONFIG_PARAVIRT_SPINLOCKS=y
 CONFIG_PARAVIRT_TIME_ACCOUNTING=y
 CONFIG_PARAVIRT=y
+# CONFIG_PARIDE is not set
 CONFIG_PARMAN=m
+# CONFIG_PARPORT_AX88796 is not set
 CONFIG_PARPORT_1284=y
 CONFIG_PARPORT=m
 # CONFIG_PARPORT_PANEL is not set
@@ -5304,6 +5309,7 @@ CONFIG_QUOTA_NETLINK_INTERFACE=y
 CONFIG_QUOTA=y
 CONFIG_R6040=m
 CONFIG_R8169=m
+# CONFIG_R8188EU is not set
 CONFIG_R8712U=m
 CONFIG_RADIO_ADAPTERS=m
 CONFIG_RADIO_MAXIRADIO=m
@@ -7117,6 +7123,7 @@ CONFIG_SX9360=m
 # CONFIG_SX9500 is not set
 CONFIG_SYMBOLIC_ERRNAME=y
 CONFIG_SYNC_FILE=y
+# CONFIG_SYNCLINK_CS is not set
 CONFIG_SYNCLINK_GT=m
 CONFIG_SYN_COOKIES=y
 CONFIG_SYNTH_EVENT_GEN_TEST=m
@@ -7487,6 +7494,7 @@ CONFIG_UBIFS_FS=m
 CONFIG_UBIFS_FS_SECURITY=y
 CONFIG_UBIFS_FS_XATTR=y
 # CONFIG_UBSAN is not set
+# CONFIG_UCB1400_CORE is not set
 # CONFIG_UCLAMP_TASK is not set
 CONFIG_UCSI_ACPI=m
 CONFIG_UCSI_CCG=m
@@ -7582,6 +7590,7 @@ CONFIG_USB_EPSON2888=y
 CONFIG_USB_EZUSB_FX2=m
 # CONFIG_USB_FEW_INIT_RETRIES is not set
 # CONFIG_USB_FOTG210_HCD is not set
+# CONFIG_USB_FTDI_ELAN is not set
 # CONFIG_USB_FUNCTIONFS is not set
 # CONFIG_USB_G_ACM_MS is not set
 # CONFIG_USB_GADGETFS is not set
@@ -7985,16 +7994,20 @@ CONFIG_VIDEO_IPU3_IMGU=m
 CONFIG_VIDEO_IVTV=m
 CONFIG_VIDEO_LM3560=m
 CONFIG_VIDEO_LM3646=m
+# CONFIG_VIDEO_M5MOLS is not set
 # CONFIG_VIDEO_MAX96712 is not set
 # CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
 CONFIG_VIDEO_MT9M001=m
+# CONFIG_VIDEO_MT9M032 is not set
 # CONFIG_VIDEO_MT9M111 is not set
 CONFIG_VIDEO_MT9P031=m
+# CONFIG_VIDEO_MT9T001 is not set
 CONFIG_VIDEO_MT9T112=m
 CONFIG_VIDEO_MT9V011=m
 CONFIG_VIDEO_MT9V032=m
 CONFIG_VIDEO_MT9V111=m
 CONFIG_VIDEO_MXB=m
+# CONFIG_VIDEO_NOON010PC30 is not set
 CONFIG_VIDEO_OG01A1B=m
 CONFIG_VIDEO_OV02A10=m
 CONFIG_VIDEO_OV08D10=m
@@ -8040,6 +8053,7 @@ CONFIG_VIDEO_S5C73M3=m
 CONFIG_VIDEO_S5K4ECGX=m
 CONFIG_VIDEO_S5K5BAF=m
 CONFIG_VIDEO_S5K6A3=m
+# CONFIG_VIDEO_S5K6AA is not set
 CONFIG_VIDEO_SAA6588=m
 CONFIG_VIDEO_SAA7134_ALSA=m
 CONFIG_VIDEO_SAA7134_DVB=m
@@ -8050,6 +8064,7 @@ CONFIG_VIDEO_SAA7146=m
 CONFIG_VIDEO_SAA7146_VV=m
 CONFIG_VIDEO_SAA7164=m
 CONFIG_VIDEO_SOLO6X10=m
+# CONFIG_VIDEO_SR030PC30 is not set
 CONFIG_VIDEO_STK1160_COMMON=m
 CONFIG_VIDEO_STK1160=m
 # CONFIG_VIDEO_STKWEBCAM is not set
@@ -8073,6 +8088,7 @@ CONFIG_VIDEO_VISL=m
 CONFIG_VIDEO_VIVID_CEC=y
 CONFIG_VIDEO_VIVID=m
 CONFIG_VIDEO_VIVID_MAX_DEVS=64
+# CONFIG_VIDEO_VS6624 is not set
 # CONFIG_VIDEO_XILINX is not set
 # CONFIG_VIDEO_ZORAN is not set
 # CONFIG_VIPERBOARD_ADC is not set
