--- a/kernel-x86_64-fedora.config
+++ b/kernel-x86_64-fedora.config
@@ -1040,6 +1040,7 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_SRSO=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_THERMAL=y
 CONFIG_CPU_FREQ=y
@@ -2160,6 +2161,7 @@ CONFIG_GAMEPORT_NS558=m
 # CONFIG_GCC_PLUGIN_STACKLEAK is not set
 # CONFIG_GCOV_KERNEL is not set
 # CONFIG_GDB_SCRIPTS is not set
+CONFIG_GDS_FORCE_MITIGATION=y
 # CONFIG_GENERIC_ADC_BATTERY is not set
 # CONFIG_GENERIC_ADC_THERMAL is not set
 CONFIG_GENERIC_CPU=y
