--- a/kernel-aarch64-rt-debug-rhel.config
+++ b/kernel-aarch64-rt-debug-rhel.config
@@ -7406,6 +7406,7 @@ CONFIG_VIDEO_BT848=m
 # CONFIG_VIDEO_BT866 is not set
 # CONFIG_VIDEOBUF2_DMA_SG is not set
 # CONFIG_VIDEOBUF2_DVB is not set
+CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_CPIA2 is not set
 CONFIG_VIDEO_CS3308=m
