--- a/kernel-ppc64le-debug-fedora.config
+++ b/kernel-ppc64le-debug-fedora.config
@@ -7496,6 +7496,7 @@ CONFIG_VIDEO_AU0828=m
 # CONFIG_VIDEO_AU0828_RC is not set
 CONFIG_VIDEO_AU0828_V4L2=y
 CONFIG_VIDEO_BT848=m
+CONFIG_VIDEO_CAMERA_SENSOR=y
 CONFIG_VIDEO_CADENCE_CSI2RX=m
 CONFIG_VIDEO_CADENCE_CSI2TX=m
 # CONFIG_VIDEO_CADENCE is not set
