--- a/kernel-aarch64-debug-fedora.config
+++ b/kernel-aarch64-debug-fedora.config
@@ -8975,6 +8975,7 @@ CONFIG_VIDEO_CADENCE_CSI2RX=m
 CONFIG_VIDEO_CADENCE_CSI2TX=m
 # CONFIG_VIDEO_CADENCE is not set
 # CONFIG_VIDEO_CAFE_CCIC is not set
+CONFIG_VIDEO_CAMERA_SENSOR=y
 CONFIG_VIDEO_CCS=m
 CONFIG_VIDEO_CODA=m
 CONFIG_VIDEO_CX18_ALSA=m
