--- a/kernel-aarch64-rhel.config
+++ b/kernel-aarch64-rhel.config
@@ -7209,6 +7209,7 @@ CONFIG_VIDEO_AU0828_V4L2=y
 CONFIG_VIDEO_BT848=m
 # CONFIG_VIDEOBUF2_DMA_SG is not set
 # CONFIG_VIDEOBUF2_DVB is not set
+CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_CPIA2 is not set
 CONFIG_VIDEO_CS3308=m
