--- a/kernel-ppc64le-rhel.config
+++ b/kernel-ppc64le-rhel.config
@@ -6764,6 +6764,7 @@ CONFIG_VIDEO_AU0828_V4L2=y
 CONFIG_VIDEO_BT848=m
 CONFIG_VIDEOBUF2_DMA_SG=m
 CONFIG_VIDEOBUF2_DVB=m
+CONFIG_VIDEO_CAMERA_SENSOR=y
 # CONFIG_VIDEO_CCS is not set
 # CONFIG_VIDEO_CPIA2 is not set
 CONFIG_VIDEO_CS3308=m
